src/app_runtime/tests/prompts/snapshots/codexize__app__tests_prompts__live_summary_interactive.snap
---
source: src/app/../app_runtime/tests/prompts/mod.rs
description: Prompt output snapshot
---


Immediately create /tmp/codexize-prompt-fixture/session/artifacts/live_summary.interactive.txt, then every 2–3 min — including across long tool calls and while sub-agents are running — overwrite it with `<short title> | <one-paragraph summary>` so the operator can follow along. If you delegate to a sub-agent or any other long-running call, poll its progress periodically and rewrite the live summary on each poll. Keep this file current until you exit.
