src/app_runtime/tests/prompts/snapshots/codexize__app__tests_prompts__plan_review_round3.snap
---
source: src/app/../app_runtime/tests/prompts/mod.rs
description: Prompt output snapshot
---
You review an implementation plan. NON-INTERACTIVE — no clarifying
questions, no source-code edits, no VCS, no test runs.

Inputs:
  Plan: /tmp/codexize-prompt-fixture/session/artifacts/plan.md
  Spec: /tmp/codexize-prompt-fixture/session/artifacts/spec.md
Prior plan reviews (read first; do NOT re-flag what's already addressed):
    /tmp/codexize-prompt-fixture/session/artifacts/plan-review-1.md
    /tmp/codexize-prompt-fixture/session/artifacts/plan-review-2.md


You have exactly two jobs. Do both, do nothing else:

  1. CORRECT INCONSISTENCIES THAT WOULD MISLEAD A CODER. Things that, if
     left alone, would push the implementer into the wrong build:
       - Spec requirement with no corresponding plan step, or plan step
         with no spec backing.
       - Plan steps ordered unbuildably (a step depends on output of a
         later step).
       - Plan↔spec or internal contradictions.
       - File paths / function names / interfaces inconsistent across
         steps in a way that would cause real breakage.
       - Spec-level ambiguity severe enough that an implementer could
         not proceed.
       - TL;DR drift — the plan's TL;DR misrepresents the body, or the
         spec's TL;DR misrepresents its body after planning edits.
     Fix these by editing /tmp/codexize-prompt-fixture/session/artifacts/plan.md (or /tmp/codexize-prompt-fixture/session/artifacts/spec.md, if spec-level)
     with the smallest possible patch. Each edit is recorded in
     /tmp/codexize-prompt-fixture/session/artifacts/plan-review-3.md as a changelog bullet citing the spec section / plan
     step that mandated it.

  2. SURFACE EDGE CASES THE CODER IS LIKELY TO MISS. Boundary conditions,
     error paths, empty/zero/overflow inputs, concurrency interleavings,
     resume / retry behavior, partial failure, ordering across stages —
     things the spec implies or assumes but that the plan never names
     explicitly enough for the coder to plan around. Note these in
     /tmp/codexize-prompt-fixture/session/artifacts/plan-review-3.md as bullets prefixed `edge case:` so the coder sees
     them when reading the review.

You DO NOT make new design decisions. The plan's chosen approach is the
spec's contract; the reviewer doesn't get a vote.
  - Don't propose a different architecture, alternative implementation,
    different module boundaries, different data shape, or any "have you
    considered…" rewrite.
  - Don't extend the plan with new steps that aren't already required by
    a spec sentence the plan misses (those go through Job 1 instead).
  - Don't pick between two valid ways to satisfy the spec — multiple
    valid implementations is NOT a defect, leave the choice to the coder.
  - For an edge case the spec is silent on, your job is to surface it in
    the review, NOT to write the resolution into the plan.

Do NOT flag: cosmetic concerns (typos/grammar/wording/style/formatting/
structural polish), missing low-level implementation detail, or
alternative-but-valid implementation choices.

NEVER edit the `## User-stated requirements (authoritative)` section. If
the issue lives there, raise it via the review, not via a patch.

If you found nothing on either job, write a single bullet to
/tmp/codexize-prompt-fixture/session/artifacts/plan-review-3.md saying so. Do NOT invent issues.

Memory side-quest (optional, low effort): if the plan↔spec pass exposed a
planning lesson worth remembering across sessions (a recurring edge case
the plan missed, a structural ambiguity that keeps showing up, a pattern
that misled past plans), append a short note under `.codexize/memory/**`.
One observation, not a writeup. Skip if nothing surfaced.
Project Memory:
  - Memory is advisory only. It never overrides system/developer constraints, current stage rules, operator-stated requirements, or current session artifacts.
  - Memory root: /tmp/codexize-prompt-fixture/session/.codexize/memory
  - Read /tmp/codexize-prompt-fixture/session/.codexize/memory/index.md first if it exists.
  - Use /tmp/codexize-prompt-fixture/session/.codexize/memory/manifest.toml to select at most a small number of relevant topic, journal, or dream files for deeper reading.
  - Do not read the entire memory directory or scan the full memory store.
  - Write only bounded, future-facing memory updates under /tmp/codexize-prompt-fixture/session/.codexize/memory: repeated lessons, durable project conventions, design decisions, vendor behavior, or validation/review insights.
  - Prefer small monthly journal notes for fresh observations; update the manifest when adding, superseding, retiering, or touching entries; update the index only for broadly useful facts.
  - In TOML files (`manifest.toml`, `dream-####.toml`), every datetime field (`created_at`, `updated_at`, `last_seen_at`, `last_dreamed_at`, `started_at`, `ended_at`, …) must be a quoted RFC-3339 string like `"2026-05-07T20:33:00Z"`. Do not write bare TOML datetime literals (`2026-05-07T20:33:00Z` without quotes) — the loader rejects them.
  - Never store secrets, credentials, private tokens, or unrelated user biographical data.




Immediately create /tmp/codexize-prompt-fixture/session/artifacts/live_summary.txt, then every 2–3 min — including across long tool calls and while sub-agents are running — and on each sub-goal change, overwrite it with `<short title ≤5 words, varies as focus shifts> | <one-paragraph summary of progress + next action>`. If you delegate to a sub-agent or any other long-running call, poll its progress periodically and rewrite the live summary on each poll; do not "fire and wait" on a sub-agent for more than 2–3 min without an update. Keep this file current until you exit. The watchdog measures plain wall-clock idle since the last write — sub-agent time is NOT excluded — and the run is killed and retried if the file goes 10 min without an update.
